[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-music-bot"
version = "0.1.0"
description = "A Telegram bot to play YouTube music."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "python-telegram-bot",
    "pytube",
    "python-dotenv",
]